@@ -444,6 +444,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 451) Improve the phrase mappings of the Chinese converter arrays.
 * (bug 12487) Rights log is not fully internationalized
 * (bug 10837) Language variants no longer override other languages than base
+* (bug 14778) 'limit' parameter now applies to history feeds as well as
+  history pages
 
 === API changes in 1.13 ===
 
